Adición del chat

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -5,4 +5,49 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <netTcpBinding>
+                <binding name="NetTcpBinding_IUserManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IFriendshipManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IFriendRequestManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IChatManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+            </netTcpBinding>
+        </bindings>
+		
+        <client>
+            <endpoint address="net.tcp://localhost:1441/UserService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IUserManager" contract="HiveProxy.IUserManager"
+                name="NetTcpBinding_IUserManager" />
+            <endpoint address="net.tcp://localhost:1441/FriendshipService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendshipManager"
+                contract="HiveProxy.IFriendshipManager" name="NetTcpBinding_IFriendshipManager" />
+            <endpoint address="net.tcp://localhost:1441/FriendRequestService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IFriendRequestManager"
+                contract="HiveProxy.IFriendRequestManager" name="NetTcpBinding_IFriendRequestManager" />
+            <endpoint address="net.tcp://localhost:1441/ChatService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IChatManager" contract="HiveProxy.IChatManager"
+                name="NetTcpBinding_IChatManager" />
+        </client>
+    </system.serviceModel>
 </configuration>
