Agregación de cambios al actualizar perfil

--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Logic\DialogManager.cs" />
     <Compile Include="Logic\Hasher.cs" />
     <Compile Include="Logic\LoggerManager.cs" />
+    <Compile Include="Logic\ProfileGenerator.cs" />
     <Compile Include="Logic\UserProfileSingleton.cs" />
     <Compile Include="Logic\Validator.cs" />
     <Compile Include="Properties\Resources.en-US.Designer.cs">
