Prueba de envio de correos

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -32,6 +32,18 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_ILeaderBoardManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IEmailVerificationManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 		
@@ -48,6 +60,12 @@
             <endpoint address="net.tcp://localhost:1441/ChatService" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IChatManager" contract="HiveProxy.IChatManager"
                 name="NetTcpBinding_IChatManager" />
+            <endpoint address="net.tcp://localhost:1441/LeaderBoardService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_ILeaderBoardManager"
+                contract="HiveProxy.ILeaderBoardManager" name="NetTcpBinding_ILeaderBoardManager" />
+            <endpoint address="net.tcp://localhost:1441/EmailVerificationService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailVerificationManager"
+                contract="HiveProxy.IEmailVerificationManager" name="NetTcpBinding_IEmailVerificationManager" />
         </client>
     </system.serviceModel>
 </configuration>
