Arreglo de la ventana lista de amigos en la parte de los botones, agregación de botones y funcionalidades en la ventana del main

--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -224,6 +224,13 @@
     <Resource Include="Images\Background\UpperFrame.jpg" />
     <Resource Include="Images\Icons\FriendsButtonIcon.png" />
     <Resource Include="Images\Icons\SettingsIcon.png" />
+    <Resource Include="Images\Icons\IconSearch.png" />
+    <Resource Include="Images\Icons\IconDoesNotExistFriends.png" />
+    <Resource Include="Images\Icons\FriensIcon.png" />
+    <Resource Include="Images\Icons\JoinGameIcon.png" />
+    <Resource Include="Images\Icons\MyAccountIcon.png" />
+    <Resource Include="Images\Icons\CreateMatch.png" />
+    <Resource Include="Images\Icons\JoinMatch.png" />
     <Content Include="Video\VideoMenu.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
