Culminación de la ventana de leaderboards y agregacion a conexión y desconexión del jugador

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -44,6 +44,24 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_IEmailInvitationManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IUserSessionManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
+                <binding name="NetTcpBinding_IMatchCreatorManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 		
@@ -66,6 +84,15 @@
             <endpoint address="net.tcp://localhost:1441/EmailVerificationService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailVerificationManager"
                 contract="HiveProxy.IEmailVerificationManager" name="NetTcpBinding_IEmailVerificationManager" />
+            <endpoint address="net.tcp://localhost:1441/EmailInvitationService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IEmailInvitationManager"
+                contract="HiveProxy.IEmailInvitationManager" name="NetTcpBinding_IEmailInvitationManager" />
+            <endpoint address="net.tcp://localhost:1441/UserSessionService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IUserSessionManager"
+                contract="HiveProxy.IUserSessionManager" name="NetTcpBinding_IUserSessionManager" />
+            <endpoint address="net.tcp://localhost:1441/MatchCreatorService"
+                binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMatchCreatorManager"
+                contract="HiveProxy.IMatchCreatorManager" name="NetTcpBinding_IMatchCreatorManager" />
         </client>
     </system.serviceModel>
 </configuration>
