Implementación de ventana de lobbt y guest

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -62,6 +62,12 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_IFriendsManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 		
@@ -93,6 +99,9 @@
             <endpoint address="net.tcp://localhost:1441/MatchCreatorService"
                 binding="netTcpBinding" bindingConfiguration="NetTcpBinding_IMatchCreatorManager"
                 contract="HiveProxy.IMatchCreatorManager" name="NetTcpBinding_IMatchCreatorManager" />
+            <endpoint address="net.tcp://localhost:1441/FriendsService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IFriendsManager" contract="HiveProxy.IFriendsManager"
+                name="NetTcpBinding_IFriendsManager" />
         </client>
     </system.serviceModel>
 </configuration>
