Correción en de la Exceción del perfil de un amigo que daba fuera de rango, se ajusto los margenes y espacios

--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -263,6 +263,7 @@
     <Resource Include="Images\Icons\WorldStatistics.png" />
     <Resource Include="Images\Icons\RefreshIcon2.png" />
     <Resource Include="Images\Icons\SearchIcon2.jpg" />
+    <Resource Include="Images\Icons\AddIcon.png" />
     <Content Include="Video\VideoMenu.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
