Implementación de lobby y unión a partida

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -68,6 +68,12 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_ILobbyManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 		
@@ -102,6 +108,9 @@
             <endpoint address="net.tcp://localhost:1441/FriendsService" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_IFriendsManager" contract="HiveProxy.IFriendsManager"
                 name="NetTcpBinding_IFriendsManager" />
+            <endpoint address="net.tcp://localhost:1441/LobbyService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_ILobbyManager" contract="HiveProxy.ILobbyManager"
+                name="NetTcpBinding_ILobbyManager" />
         </client>
     </system.serviceModel>
 </configuration>
