Correciones en varias ventanas sobre el estandar y tambien internacionalización, funcionalidad en la ventana de ajuste, primer prototipo de jugabilidad

--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -104,6 +104,9 @@
     <Compile Include="Views\FriendsListView.xaml.cs">
       <DependentUpon>FriendsListView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\GameBoardView.xaml.cs">
+      <DependentUpon>GameBoardView.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\GameCodeView.xaml.cs">
       <DependentUpon>GameCodeView.xaml</DependentUpon>
     </Compile>
@@ -125,6 +128,9 @@
     <Compile Include="Views\StatisticsView.xaml.cs">
       <DependentUpon>StatisticsView.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\VerifyEmailAndUsername.xaml.cs">
+      <DependentUpon>VerifyEmailAndUsername.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -142,6 +148,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\FriendsListView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GameBoardView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -170,6 +180,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Views\StatisticsView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\VerifyEmailAndUsername.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -266,6 +280,39 @@
     <Resource Include="Images\Icons\SearchIcon2.jpg" />
     <Resource Include="Images\Icons\AddIcon.png" />
     <Resource Include="Images\Icons\DefaultImagePlayerLobby.png" />
+    <Resource Include="Images\Characters\EU.png" />
+    <Resource Include="Images\Characters\Mexico.png" />
+    <Resource Include="Images\Characters\SoundOf.png" />
+    <Resource Include="Images\Characters\SoundOn.png" />
+    <Resource Include="Images\Background\GameBoardBackground.png" />
+    <Resource Include="Images\Background\GameBoard2Background.png" />
+    <Resource Include="Images\Icons\Go out Game.png" />
+    <Content Include="Images\GamePieces\Ant_Player1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\GamePieces\Ant_Player2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\GamePieces\Beetle_Player1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\GamePieces\Beetle_Player2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\GamePieces\Grasshopper_Player1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\GamePieces\Grasshopper_Player2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Resource Include="Images\GamePieces\Queen_Player1.png" />
+    <Resource Include="Images\GamePieces\Queen_Player2.png" />
+    <Content Include="Images\GamePieces\Spider_Player1.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Include="Images\GamePieces\Spider_Player2.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Video\VideoMenu.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
