--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -287,6 +287,7 @@
     <Resource Include="Images\Background\GameBoardBackground.png" />
     <Resource Include="Images\Background\GameBoard2Background.png" />
     <Resource Include="Images\Icons\Go out Game.png" />
+    <Resource Include="Images\Background\BottonPlay.png" />
     <Content Include="Images\GamePieces\Ant_Player1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
