--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -81,9 +81,11 @@
     </Compile>
     <Compile Include="Logic\Constants.cs" />
     <Compile Include="Logic\DialogManager.cs" />
+    <Compile Include="Logic\GamePiece.cs" />
     <Compile Include="Logic\Hasher.cs" />
     <Compile Include="Logic\LoggerManager.cs" />
     <Compile Include="Logic\MatchSingleton.cs" />
+    <Compile Include="Logic\Piece.cs" />
     <Compile Include="Logic\ProfileGenerator.cs" />
     <Compile Include="Logic\UserProfileSingleton.cs" />
     <Compile Include="Logic\Validator.cs" />
