Inicio de partida

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -74,6 +74,12 @@
                         <transport sslProtocols="None" />
                     </security>
                 </binding>
+                <binding name="NetTcpBinding_IGameManager">
+                    <reliableSession enabled="true" />
+                    <security mode="None">
+                        <transport sslProtocols="None" />
+                    </security>
+                </binding>
             </netTcpBinding>
         </bindings>
 		
@@ -111,6 +117,9 @@
             <endpoint address="net.tcp://localhost:1441/LobbyService" binding="netTcpBinding"
                 bindingConfiguration="NetTcpBinding_ILobbyManager" contract="HiveProxy.ILobbyManager"
                 name="NetTcpBinding_ILobbyManager" />
+            <endpoint address="net.tcp://localhost:1441/GameService" binding="netTcpBinding"
+                bindingConfiguration="NetTcpBinding_IGameManager" contract="HiveProxy.IGameManager"
+                name="NetTcpBinding_IGameManager" />
         </client>
     </system.serviceModel>
 </configuration>
