--- a/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
+++ b/HiveGameClient/HiveGameWPFApp/HiveGameWPFApp.csproj
@@ -237,9 +237,6 @@
   </ItemGroup>
   <ItemGroup />
   <ItemGroup>
-    <Resource Include="Images\Background\loginBackground.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Content Include="Audio\Game.mp3">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -290,6 +287,7 @@
     <Resource Include="Images\Background\GameBoard2Background.png" />
     <Resource Include="Images\Icons\Go out Game.png" />
     <Resource Include="Images\Background\BottonPlay.png" />
+    <Resource Include="Images\Background\loginBackground.png" />
     <Content Include="Images\GamePieces\Ant_Player1.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
@@ -316,6 +314,7 @@
     <Content Include="Images\GamePieces\Spider_Player2.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Resource Include="Images\Icons\Hive.png" />
     <Content Include="Video\VideoMenu.mp4">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
