--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-    <configSections>
-    </configSections>
+	<configSections>
+		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
+	</configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
@@ -122,4 +123,23 @@
                 name="NetTcpBinding_IGameManager" />
         </client>
     </system.serviceModel>
+	<log4net>
+		<appender name="File" type="log4net.Appender.RollingFileAppender">
+			<file value="logs/logfile.txt" />
+			<datePattern value="yyyy-MM-dd'-FULL.txt'" />
+			<appendToFile value="true" />
+			<preserveLogFileNameExtension value="true" />
+			<rollingStyle value="Size" />
+			<maximumFileSize value="2MB" />
+			<maxSizeRollBackups value="5" />
+			<staticLogFileName value="false" />
+			<layout type="log4net.Layout.PatternLayout">
+				<param name="ConversionPattern" value="%date [%thread] %-5level %logger - %message%newline" />
+			</layout>
+		</appender>
+		<root>
+			<level value="ALL" />
+			<appender-ref ref="File" />
+		</root>
+	</log4net>
 </configuration>
