se implemento el cambio de idioma detectando el idioma del sistema

--- a/HiveGameClient/HiveGameWPFApp/App.config
+++ b/HiveGameClient/HiveGameWPFApp/App.config
@@ -2,7 +2,10 @@
 <configuration>
 	<configSections>
 		<section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,log4net" />
-	</configSections>
+	 <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+   <section name="HiveGameWPFApp.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+  </sectionGroup>
+ </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" />
     </startup>
@@ -142,4 +145,11 @@
 			<appender-ref ref="File" />
 		</root>
 	</log4net>
+ <userSettings>
+  <HiveGameWPFApp.Properties.Settings>
+   <setting name="Language" serializeAs="String">
+    <value>en-US</value>
+   </setting>
+  </HiveGameWPFApp.Properties.Settings>
+ </userSettings>
 </configuration>
